--- a/app/src/main/res/layout/second.xml
+++ b/app/src/main/res/layout/second.xml
@@ -14,21 +14,36 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/LargeText"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="50dp"
         android:textSize = "30sp"
          />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="#FF000000" />
+
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
+        android:text="Address"
         android:id="@+id/textView"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="10dp"
+        android:textSize = "20sp"
         android:autoLink="map"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="#FF000000" />
 
     <TextView
         android:layout_width="match_parent"
@@ -41,13 +56,19 @@
         android:textColor="#0000FF"
         android:autoLink="phone"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="#FF000000" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
-        android:id="@+id/textView3"
+        android:id="@+id/Menu"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="10dp" />
 
