--- a/app/src/main/res/layout/activity_tab4.xml
+++ b/app/src/main/res/layout/activity_tab4.xml
@@ -6,21 +6,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Tab2" >
+    tools:context=".Tab4" >
 
-    <Button
-        android:id="@+id/tab2_button1"
+    <TextView
+        android:id="@+id/textViewtab4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/tab1_button"
-        android:visibility="gone"/>
-
-
-    <ListView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/tab2_listView" />
+        android:text="Made by Mir" />
 
 </RelativeLayout>
