apk release by jun

--- a/app/src/main/res/layout/activity_tab3.xml
+++ b/app/src/main/res/layout/activity_tab3.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Tab3" >
+    tools:context="com.benchmarking.fft_phonebook.jun.Tab3" >
 
     <TextView
         android:id="@+id/textView1"
@@ -14,6 +14,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="Made by Mir" />
+        android:text="Made by Jun \nhttp://junbenchmarking.tistory.com/" />
 
 </RelativeLayout>
