--- a/app/src/main/res/layout/activity_tab1.xml
+++ b/app/src/main/res/layout/activity_tab1.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Tab1" >
+    tools:context="com.benchmarking.fft_phonebook.jun.Tab1" >
 
     <Button
         android:id="@+id/button1"
@@ -22,5 +22,14 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/listView2" />
+
+    <TextView
+        android:id="@+id/contact"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:text="업데이트 연락처: \n carpediem.jun7@gmail.com" />
 
 </RelativeLayout>
