--- a/app/src/main/res/layout/activity_tab2.xml
+++ b/app/src/main/res/layout/activity_tab2.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Tab2" >
+    tools:context="com.benchmarking.fft_phonebook.jun.Tab2" >
 
     <Button
         android:id="@+id/tab2_button1"
