--- a/app/src/main/res/layout/activity_tab4.xml
+++ b/app/src/main/res/layout/activity_tab4.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Tab4" >
+    tools:context="com.benchmarking.fft_phonebook.jun.Tab4" >
 
     <TextView
         android:id="@+id/textViewtab4"
