--- a/app/src/main/res/layout/tab_activity_main.xml
+++ b/app/src/main/res/layout/tab_activity_main.xml
@@ -3,4 +3,4 @@ xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/pager"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".Tab_MainActivity" />
+tools:context="com.benchmarking.fft_phonebook.jun.Tab_MainActivity" />
